app/styles/app.scss
html, body {
    background-color: #111;
    margin: 0;
    padding: 0;
    color: #fff;
    font-family: arial;
}

.heroes {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
}

.hero {
    margin: 10px 10px;
    background-color: #141414;
    border: 1px solid #222;
    border-radius: 10px;
    width: 300px;
    color: #fff;
    display: flex;
    flex-direction: column;
    align-items: center;
    .basics {
        .portrait {
            width: 80px;
            height: 80px;
            //width: 15px;
            //height: 15px;
            margin: 0 auto;
            img {
                width: 80px;
                //width: 15px;
            }
        }
        .name {
            p {
                margin: 5px 0 10px;
                text-align: center;
            }
        }
    }
    .advanced {
        width: 100%;
        padding: 0 30px 10px;
        box-sizing: border-box;
        .attributes {
            margin-top: 20px;
            p {
                margin: 7px 0;
                font-size: 12px;
            }
        }
    }
}

.bar-stat {
    width: 100%;
    .bar {
        margin: 4px 0;
        &--aps {
            .bar__bg {
                background-color: yellow;
            }
        }
        &--dps {
            .bar__bg {
                background-color: red;
            }
        }
        &--burst {
            .bar__bg {
                background-color: blue;
            }
        }
        &__labels {
            display: flex;
            justify-content: space-between;
            width: 100%;
            .label {
                color: white;
                font-size: 10px;
                position: relative;
                width: 10px;
                height: 16px;
                p {
                    position: absolute;
                    display: block;
                    top: 0;
                    text-align: center;
                    margin: 0;
                    left: 50%;
                    transform: translateX(-50%);
                }
                .arrow-container {
                    display: flex;
                    justify-content: center;
                    position: absolute;
                    bottom: 0;
                    .arrow {
                        width: 0;
                        height: 0;
                        border-left: 5px solid transparent;
                        border-right: 5px solid transparent;
                        
                        border-top: 5px solid #fff;
                    }
                }
            }
        }
        .line {
            width: 100%;
            max-width: 240px;
            margin: 0 auto;
        }
        &__bg {
            height: 8px;
        }
    }
}

.filter {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    width: 600px;
    margin: 0 auto;
    &__trait {
        background-color: #171717;
        color: #666;
        border: none;
        width: 100px;
        text-align: center;
        margin: 5px;
        cursor: pointer;
        padding: 10px;
        &:focus {
            outline: none;
        }
        &.active {
            color: #fff;
            border: 1px solid #333;
            background-color: #222;
        }
    }
}

.sliders {
    .slider {
        width: 400px;
        display: flex;
        align-items: center;
        p {
            width: 340px;
            margin-right: 20px;
        }
        .value {
            width: 30px;
            height: 30px;
            position: relative;
            margin-left: 5px;
            input {
                font-size: 14px;
                width: 30px;
                height: 30px;
                background-color: orange;
                border: 0;
                border-radius: 50%;
                text-align: center;
                position: relative;
                z-index: 2;
            }
            &:before {
                content: '';
                width: 10px;
                height: 10px;
                background-color: orange;
                position: absolute;
                left: -3px;
                top: 11px;
                z-index: 1;
                transform: rotate(-45deg);
            }
        }



        //Style inputs https://css-tricks.com/styling-cross-browser-compatible-range-inputs-css/
        //https://github.com/darlanrod/input-range-sass
        $track-color: #eceff1 !default;
        $thumb-color: #607d8b !default;

        $thumb-radius: 12px !default;
        $thumb-height: 24px !default;
        $thumb-width: 24px !default;
        $thumb-shadow-size: 4px !default;
        $thumb-shadow-blur: 4px !default;
        $thumb-shadow-color: rgba(0, 0, 0, .2) !default;
        $thumb-border-width: 2px !default;
        $thumb-border-color: #eceff1 !default;

        $track-width: 100% !default;
        $track-height: 8px !default;
        $track-shadow-size: 1px !default;
        $track-shadow-blur: 1px !default;
        $track-shadow-color: rgba(0, 0, 0, .2) !default;
        $track-border-width: 2px !default;
        $track-border-color: #cfd8dc !default;

        $track-radius: 5px !default;
        $contrast: 5% !default;

        @mixin shadow($shadow-size, $shadow-blur, $shadow-color) {
        box-shadow: $shadow-size $shadow-size $shadow-blur $shadow-color, 0 0 $shadow-size lighten($shadow-color, 5%);
        }

        @mixin track {
        cursor: pointer;
        height: $track-height;
        transition: all .2s ease;
        width: $track-width;
        }

        @mixin thumb {
        @include shadow($thumb-shadow-size, $thumb-shadow-blur, $thumb-shadow-color);
        background: $thumb-color;
        border: $thumb-border-width solid $thumb-border-color;
        border-radius: $thumb-radius;
        cursor: pointer;
        height: $thumb-height;
        width: $thumb-width;
        }

        [type='range'] {
        -webkit-appearance: none;
        margin: $thumb-height / 2 0;
        width: $track-width;

        &:focus {
            outline: 0;

            &::-webkit-slider-runnable-track {
            background: lighten($track-color, $contrast);
            }

            &::-ms-fill-lower {
            background: $track-color;
            }

            &::-ms-fill-upper {
            background: lighten($track-color, $contrast);
            }
        }

        &::-webkit-slider-runnable-track {
            @include track;
            @include shadow($track-shadow-size, $track-shadow-blur, $track-shadow-color);
            background: $track-color;
            border: $track-border-width solid $track-border-color;
            border-radius: $track-radius;
        }

        &::-webkit-slider-thumb {
            @include thumb;
            -webkit-appearance: none;
            margin-top: ((-$track-border-width * 2 + $track-height) / 2) - ($thumb-height / 2);
        }

        &::-moz-range-track {
            @include track;
            @include shadow($track-shadow-size, $track-shadow-blur, $track-shadow-color);
            background: $track-color;
            border: $track-border-width solid $track-border-color;
            border-radius: $track-radius;
        }

        &::-moz-range-thumb {
            @include thumb;
        }

        &::-ms-track {
            @include track;
            background: transparent;
            border-color: transparent;
            border-width: ($thumb-height / 2) 0;
            color: transparent;
        }

        &::-ms-fill-lower {
            @include shadow($track-shadow-size, $track-shadow-blur, $track-shadow-color);
            background: darken($track-color, $contrast);
            border: $track-border-width solid $track-border-color;
            border-radius: $track-radius * 2;
        }

        &::-ms-fill-upper {
            @include shadow($track-shadow-size, $track-shadow-blur, $track-shadow-color);
            background: $track-color;
            border: $track-border-width solid $track-border-color;
            border-radius: $track-radius * 2;
        }

        &::-ms-thumb {
            @include thumb;
            margin-top: 0;
        }
        }
    }
}

